# magnetic_reservoirs

./: LICENSE  README.md  choose_resistance.py  classify_with_one_mtj.py  classify_with_several_mtj.py  datasets.py  import_time.py  no_reservoir.py  optuna_classify_with_several_mtj.py  predict_with_architecture_of_mtj.py  pyproject.toml  run_for_one_mtj.py  super_fast_optuna.py  super_fast_trial.py
example/: choose_resistance.py  classify_with_one_mtj.py  classify_with_several_mtj.py  datasets.py  optuna_classify_with_one_mtj.py  optuna_classify_with_several_mtj.py  predict_vmtj_architecture.py  run_for_one_mtj.py
magnetic-reservoirs/: add_filter.py  awg_control.py  close_connections.py  experiment_control.py  helper_functions.py  resistance_comparison.py
magneticreservoirs/: __init__.py  awg_control.py  experiment_control.py  helper_functions.py  magnet_control.py  memory_array.py  output_layer.py  pxi_control.py  resistance_comparison.py
notebooks/tutorial/: analog_training.ipynb
playground/: import_time.py  no_reservoir.py  super_fast_optuna.py  super_fast_trial.py
